--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -15,10 +15,10 @@
 /* Import Modules */
 @import
     'modules/global/_module',
-    'modules/position/_module',
-    'modules/themes/_module',
+    'modules/layout/_module',
     'modules/animations/_module',
     'modules/media/_module',
+    'modules/themes/_module',
     'modules/grid/_module',
     'modules/layers/_module',
     'modules/_reset',
