--- a/scss/modules/layers/_mixins.scss
+++ b/scss/modules/layers/_mixins.scss
@@ -9,7 +9,7 @@
     $active-selector: $transition-selector,
     $push: false,
     $mq: all,
-    $animation: 'scaleUp',
+    $animation: 'slideLeft',
     $extend: true
 ) {
     $push-translation: false;
