--- a/scss/modules/layout/_mixins.scss
+++ b/scss/modules/layout/_mixins.scss
@@ -1,6 +1,6 @@
 // 
-// Position Mixins and Functions
-// =============================
+// Layout Mixins and Functions
+// ===========================
 
 @mixin overlap(
     $horizontal: false,
