--- a/scss/modules/layout/_module.scss
+++ b/scss/modules/layout/_module.scss
@@ -1,8 +1,8 @@
 // 
-// Position Module
-// ===============
+// Layout Module
+// =============
 
-// Position Settings
+// Layout Settings
 $positions-vertical: (
     top, 
     bottom, 
