--- a/scss/modules/notifications/_module.scss
+++ b/scss/modules/notifications/_module.scss
@@ -3,6 +3,8 @@
 // ====================
 $notification-style: default !default;
 $notification-theme: default !default;
+$notificationQueue-position-horizontal: left !default;
+$notificationQueue-position-vertical: bottom !default;
 $notification-margin: 1rem !default;
 $notification-min-width: 10rem !default;
 $notification-text-align: center !default;
