--- a/scss/modules/layout/_classes.scss
+++ b/scss/modules/layout/_classes.scss
@@ -1,8 +1,26 @@
 //
-// Position Classes
-// ================
+// Layout Classes
+// ==============
 
-// Position Classes
+// Content Classes
+.content { @extend %content; }
+.pad { @extend %pad; }
+.pad-vertical { @extend %pad-vertical; }
+.pad-horizontal { @extend %pad-horizontal; }
+
+.pad-small { @extend %pad-small; }
+.pad-vertical-small { @extend %pad-vertical-small; }
+.pad-horizontal-small { @extend %pad-horizontal-small; }
+
+.pad-large { @extend %pad-large; }
+.pad-vertical-large { @extend %pad-vertical-large; }
+.pad-horizontal-large { @extend %pad-horizontal-large; }
+
+.no-pad, .pad-none { @extend %pad-none; }
+.pad-vertical-none { @extend %pad-vertical-none; }
+.pad-horizontal-none { @extend %pad-horizontal-none; }
+
+// Layout Classes
 #{prefixed-class('position')} { @extend %position-absolute; }
 
 @each $position-horizontal in $positions-horizontal {
