--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -28,6 +28,7 @@
     'modules/flex/_module',
     'modules/icons/_module',
     'modules/type/_module',
+    'modules/lists/_module',
     'modules/forms/_module',
     'modules/nav/_module',
     'modules/buttons/_module',
