--- a/scss/modules/forms/_module.scss
+++ b/scss/modules/forms/_module.scss
@@ -20,6 +20,10 @@ $form-input-border-width: $form-border-width !default;
 $form-input-bgcolor: $color-white !default;
 $form-input-bgcolor-lighten: rgba(255, 255, 255, 0.3) !default;
 $form-input-bgcolor-darken: rgba(0, 0, 0, 0.05) !default;
+$form-input-color-light: $color-light !default;
+$form-input-color-dark: $color-dark !default;
+$form-input-color: $form-input-color-dark !default;
+$form-input-border-color: $color-primary !default;
 
 // Select Settings
 $form-select-style: default !default;
