--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -9,6 +9,7 @@
 @import "compass/css3/transform";
 @import "compass/css3/flexbox";
 @import "compass/css3/animation";
+@import "compass/css3/user-interface";
 
 // Units
 $x: 16px !default;
