--- a/scss/modules/themes/_classes.scss
+++ b/scss/modules/themes/_classes.scss
@@ -46,6 +46,7 @@
     %heading { @extend %theme-heading-default-light; }
     %subheading { @extend %theme-subheading-default-light; }
     %anchor { @extend %theme-anchor-default-light; }
+    %input-implicit { @extend %theme-input-implicit-light; }
 }
 
 .mode-dark, .hover-mode-dark:hover {
@@ -54,4 +55,5 @@
     %heading { @extend %theme-heading-default-dark; }
     %subheading { @extend %theme-subheading-default-dark; }
     %anchor { @extend %theme-anchor-default-dark; }
+    %input-implicit { @extend %theme-input-implicit-dark; }
 }
