More Google Inbox case study; Added %stack-[mq] grid component (and introduced 'all' prefix); Removed %card row sizing, added %card-full and %card-inline; Added default %shadow; Improved %anchor component, added %anchor-fill;

--- a/docs/views/layout.html
+++ b/docs/views/layout.html
@@ -72,8 +72,8 @@
             <div class="fa fa-bell pad"></div>
         </div>
     </div>
-    <div class="card">
-        <ul class="blocklist borders-inside-vertical">
+    <div class="col-8 col-center pad-vertical">
+        <ul class="blocklist borders-inside-vertical shadow">
             <li>
                 <div class="col-3">                
                     <div class="tile-control">
@@ -130,49 +130,69 @@
                     </div>
                 </div>
                 <div class="tile-item icon"><i class="fa fa-thumbtack"></i></div>
-            </li>
-            <li class="tile">
-                <div class="tile-item icon"><div class="shape-circle-medium bg-light inline"></div></div>
-                <div class="tile-item content">
-                    <div class="col-3 col-12-small">
-                        <span class="strong">Keith Coleman</span>
+            </li> -->
+            <li>
+                <div class="col-3">
+                    <div class="tile-control">
+                        <div class="shape-circle-medium bg-light inline"></div>
                     </div>
-                    <div class="col-9 col-12-small">
-                        <span class="strong">Waterski Trip Pics</span>
-                        <span class="subtext">Shalini, Baker, Chelsea: pics from the trip up north! Photo of pork belly tri-tip steak sandwiches</span>
-                        <div class="cols-3 gutter pad-vertical">
-                            <div class="bg-light" style="height:100px"></div>
-                            <div class="bg-light" style="height:100px"></div>
-                            <div class="bg-light" style="height:100px"></div>
-                        </div>
+                    <div class="tile-content">
+                        <span class="strong">Keith Coleman</span>              
+                    </div>
+                </div>
+                <div class="col-9 content">
+                    <span class="strong">Waterski Trip Pics</span>
+                    <span class="subtext">Shalini, Baker, Chelsea: pics from the trip up north! Photo of pork belly tri-tip steak sandwiches</span>
+                    <div class="cols-3 gutter pad-vertical">
+                        <div class="bg-light" style="height:100px"></div>
+                        <div class="bg-light" style="height:100px"></div>
+                        <div class="bg-light" style="height:100px"></div>
                     </div>
                 </div>
             </li>
-            <li class="tile">
-                <div class="tile-item icon"><div class="shape-circle-medium bg-light inline"></div></div>
-                <div class="tile-item content">
-                    <div class="col-3 col-12-small">
+            <li class="all-stack-small">
+                <div class="col-3">
+                    <div class="tile-control">
+                        <div class="shape-circle-medium bg-light inline"></div>
+                    </div>
+                    <div class="tile-content">
                         <span class="strong">Travel </span>
                         <span class="subtext">(2)</span>
                     </div>
-                    <div class="col-9 col-12-small">
-                        <span class="strong">Virgin America</span>
-                        <div class="tile card">
-                            <div class="tile-item text-center mode-light bg-primary">
-                                <div>
+                </div>
+                <div class="col-9 content">
+                    <span class="strong">Virgin America</span>
+                    <div class="scroll-x">                    
+                        <div class="card-inline">
+                            <div class="tile pad text-center bg-primary">
+                                <div class="mode-light">
                                     <strong class="nowrap"><i class="fa fa-plane"></i> <span>New York</span></strong><br>
                                     <div class="label success">On Time</div>
                                 </div>
                             </div>
-                            <div class="tile-item content">
+                            <div class="tile content">
                                 <div>Virgin America Flight 374</div>
                                 <div>SFO-JFK <span class="subtext">Oct 17, </span><span class="color-success">10:55 AM - 6:33 PM</span></div>
                                 <div><a href="#"><i class="fa fa-plane"></i> Check In</a></div>
                             </div>
                         </div>
+                        <div class="card-inline">
+                            <div class="tile pad text-center bg-primary">
+                                <div class="mode-light">
+                                    <strong class="nowrap"><i class="fa fa-plane"></i> <span>New York</span></strong><br>
+                                    <div class="label success">On Time</div>
+                                </div>
+                            </div>
+                            <div class="tile content">
+                                <div>Virgin America Flight 374</div>
+                                <div>SFO-JFK <span class="subtext">Oct 17, </span><span class="color-success">10:55 AM - 6:33 PM</span></div>
+                                <div><a href="#"><i class="fa fa-plane"></i> Check In</a></div>
+                            </div>
+                            <a href="#" title="I'm filling up this entire area!" class="fill"></a>
+                        </div>
                     </div>
                 </div>
-            </li> -->
+            </li>
         </ul>
     </div>
 </section>
