--- a/scss/modules/lighting/_module.scss
+++ b/scss/modules/lighting/_module.scss
@@ -3,11 +3,12 @@
 // ==============
 
 // Shadow Settings
-$shadow-1: rgba(0, 0, 0, 0.24) 0 1px 2px;
-$shadow-2: rgba(0, 0, 0, 0.24) 0 3px 3px;
-$shadow-3: rgba(0, 0, 0, 0.24) 0 6px 3px;
-$shadow-4: rgba(0, 0, 0, 0.24) 0 10px 5px;
-$shadow-5: rgba(0, 0, 0, 0.24) 0 15px 6px;
+$shadow-1: rgba(0, 0, 0, 0.24) 0 1px 2px !default;
+$shadow-2: rgba(0, 0, 0, 0.24) 0 3px 3px !default;
+$shadow-3: rgba(0, 0, 0, 0.24) 0 6px 3px !default;
+$shadow-4: rgba(0, 0, 0, 0.24) 0 10px 5px !default;
+$shadow-5: rgba(0, 0, 0, 0.24) 0 15px 6px !default;
+$shadow-default: $shadow-1 !default;
 
 // Imports
 @import
