--- a/scss/modules/type/_components.scss
+++ b/scss/modules/type/_components.scss
@@ -189,6 +189,13 @@
     text-decoration: $type-anchor-decoration;
 
     &:hover { text-decoration: $type-anchor-decoration-hover; }
+
+    &-fill {
+        @include position-absolute(0, 0);
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 // Parent Class
